# DataInvest

./: .gitignore
src/: pyproject.toml
src/apps/etf/: admin.py  apps.py
src/apps/etf/management/commands/: runapscheduler.py
src/apps/etf/models/: capital_contributions.py  etf_asset_type.py  etf_financial_data.py  etf_info.py  etf_isin.py  etf_prices.py  etf_underlying.py  operations_record.py
src/backend/: urls.py  wsgi.py
src/backend/settings/: base.py  local.py
